--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-slick": "^0.23.8",
     "firebase": "^9.6.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -13,10 +14,13 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.6.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
+    "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
